practice commit one

--- a/practice.html
+++ b/practice.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice me good at</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perferendis ad adipisci blanditiis ea distinctio quas architecto fugiat consequatur expedita cumque tempore repellat dicta temporibus minus quam ipsam, qui deserunt!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perferendis ad adipisci blanditiis ea distinctio quas architecto fugiat consequatur expedita cumque tempore repellat dicta temporibus minus quam ipsam, qui deserunt!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perferendis ad adipisci blanditiis ea distinctio quas architecto fugiat consequatur expedita cumque tempore repellat dicta temporibus minus quam ipsam, qui deserunt!</p>
+</div>
 </body>
 </html>
