add 2nd and 3rd blog

--- a/practice.html
+++ b/practice.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <div>
+        <h3>My First Practice</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perferendis ad adipisci blanditiis ea distinctio quas architecto fugiat consequatur expedita cumque tempore repellat dicta temporibus minus quam ipsam, qui deserunt!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perferendis ad adipisci blanditiis ea distinctio quas architecto fugiat consequatur expedita cumque tempore repellat dicta temporibus minus quam ipsam, qui deserunt!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perferendis ad adipisci blanditiis ea distinctio quas architecto fugiat consequatur expedita cumque tempore repellat dicta temporibus minus quam ipsam, qui deserunt!</p>
+</div>
+    <div><h3>My 2nd Practice</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perferendis ad adipisci blanditiis ea distinctio quas architecto fugiat consequatur expedita cumque tempore repellat dicta temporibus minus quam ipsam, qui deserunt!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perferendis ad adipisci blanditiis ea distinctio quas architecto fugiat consequatur expedita cumque tempore repellat dicta temporibus minus quam ipsam, qui deserunt!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perferendis ad adipisci blanditiis ea distinctio quas architecto fugiat consequatur expedita cumque tempore repellat dicta temporibus minus quam ipsam, qui deserunt!</p>
+</div>
+    <div><h3>My 3rd Practice</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perferendis ad adipisci blanditiis ea distinctio quas architecto fugiat consequatur expedita cumque tempore repellat dicta temporibus minus quam ipsam, qui deserunt!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perferendis ad adipisci blanditiis ea distinctio quas architecto fugiat consequatur expedita cumque tempore repellat dicta temporibus minus quam ipsam, qui deserunt!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perferendis ad adipisci blanditiis ea distinctio quas architecto fugiat consequatur expedita cumque tempore repellat dicta temporibus minus quam ipsam, qui deserunt!</p>
 </div>
 </body>
