--- a/practice.html
+++ b/practice.html
@@ -17,5 +17,13 @@
     <div><h3>My 3rd Practice</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perferendis ad adipisci blanditiis ea distinctio quas architecto fugiat consequatur expedita cumque tempore repellat dicta temporibus minus quam ipsam, qui deserunt!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perferendis ad adipisci blanditiis ea distinctio quas architecto fugiat consequatur expedita cumque tempore repellat dicta temporibus minus quam ipsam, qui deserunt!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima perferendis ad adipisci blanditiis ea distinctio quas architecto fugiat consequatur expedita cumque tempore repellat dicta temporibus minus quam ipsam, qui deserunt!</p>
 </div>
+<div>
+    <h3>How to push Incremental code</h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"......"</li>
+        <li>git push</li>
+    </ul>
+</div>
 </body>
 </html>
