--- a/practice.html
+++ b/practice.html
@@ -24,6 +24,7 @@
         <li>git commit -m"......"</li>
         <li>git push</li>
     </ul>
+    <H2>My Code is amazing </H2>
 </div>
 </body>
 </html>
