--- a/practice.html
+++ b/practice.html
@@ -25,6 +25,8 @@
         <li>git push</li>
     </ul>
     <H2>My Code is amazing </H2>
+    <H2>My Code is not firing </H2>
+
 </div>
 </body>
 </html>
